<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/new_user_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_background"
        app:layout_constraintBottom_toTopOf="@+id/btn_enter"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">


        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="192dp"/>

        <!-- create user -->

        <TextView
            android:id="@+id/new_user"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Create New User"
            android:textColor="@color/arc_primary"
            android:textSize="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <!-- first name -->

        <TextView
            android:id="@+id/tv_first_name"
            android:visibility="visible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/first_name"
            android:textColor="@color/arc_dark"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/first_name"
            app:layout_constraintStart_toStartOf="@+id/first_name"
            app:layout_constraintTop_toBottomOf="@+id/new_user"/>

        <EditText
            android:id="@+id/first_name"
            android:visibility="visible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/et_selector"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textCapWords"
            android:padding="8dp"
            android:textColor="@color/arc_primary"
            android:textColorHint="@color/arc_hints"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_first_name"/>

        <TextView
            android:id="@+id/err_first_name"
            android:visibility="visible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/error"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/first_name"
            app:layout_constraintStart_toStartOf="@+id/first_name"
            app:layout_constraintTop_toBottomOf="@+id/first_name"/>

        <!-- last name -->

        <EditText
            android:id="@+id/last_name"
            android:visibility="visible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/et_selector"
            android:ems="10"
            android:hint="Last Name"
            android:inputType="textCapWords"
            android:padding="8dp"
            android:textSize="14sp"
            android:textColor="@color/arc_primary"
            app:layout_constraintBaseline_toBaselineOf="@+id/first_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"/>

        <TextView
            android:id="@+id/tv_last_name"
            android:visibility="visible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/first_name"
            android:textColor="@color/arc_dark"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/last_name"
            app:layout_constraintStart_toStartOf="@+id/last_name"
            app:layout_constraintTop_toBottomOf="@+id/new_user"/>

        <TextView
            android:id="@+id/err_last_name"
            android:visibility="visible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/error"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/last_name"
            app:layout_constraintStart_toStartOf="@+id/last_name"
            app:layout_constraintTop_toBottomOf="@+id/last_name"/>

        <!-- Business Unit -->

        <TextView
            android:id="@+id/tv_bus_unit"
            android:visibility="visible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/business_unit"
            android:textColor="@color/arc_dark"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/last_name"
            app:layout_constraintStart_toStartOf="@+id/first_name"
            app:layout_constraintTop_toBottomOf="@+id/err_last_name"/>

        <EditText
            android:id="@+id/bus_unit"
            android:visibility="visible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/et_selector"
            android:ems="10"
            android:hint="@string/select_bu"
            android:inputType="textCapCharacters|textNoSuggestions"
            android:padding="8dp"
            android:textSize="14sp"
            android:textColor="@color/arc_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_bus_unit"/>

        <TextView
            android:id="@+id/err_bus_unit"
            android:visibility="visible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/error"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/bus_unit"
            app:layout_constraintStart_toStartOf="@+id/bus_unit"
            app:layout_constraintTop_toBottomOf="@+id/bus_unit"/>

        <!-- Home Office -->

        <TextView
            android:id="@+id/tv_home_office"
            android:visibility="visible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/home_office"
            android:textColor="@color/arc_dark"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/last_name"
            app:layout_constraintStart_toStartOf="@+id/first_name"
            app:layout_constraintTop_toBottomOf="@+id/err_bus_unit"/>

        <EditText
            android:id="@+id/home_office"
            android:visibility="visible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/et_selector"
            android:ems="10"
            android:hint="@string/select_home_office"
            android:inputType="textCapWords"
            android:padding="8dp"
            android:textSize="14sp"
            android:textColor="@color/arc_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_home_office"/>

        <TextView
            android:id="@+id/err_home_office"
            android:visibility="visible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/error"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/bus_unit"
            app:layout_constraintStart_toStartOf="@+id/bus_unit"
            app:layout_constraintTop_toBottomOf="@+id/home_office"/>

        <!-- email address -->

        <TextView
            android:id="@+id/tv_email"
            android:visibility="visible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/email"
            android:textColor="@color/arc_dark"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/last_name"
            app:layout_constraintStart_toStartOf="@+id/first_name"
            app:layout_constraintTop_toBottomOf="@+id/err_home_office"/>

        <EditText
            android:id="@+id/email"
            android:visibility="visible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/et_selector"
            android:ems="10"
            android:hint="@string/name_consultarc_com"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textSize="14sp"
            android:textColor="@color/arc_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email"/>

        <TextView
            android:id="@+id/err_email"
            android:visibility="visible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/error"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/bus_unit"
            app:layout_constraintStart_toStartOf="@+id/bus_unit"
            app:layout_constraintTop_toBottomOf="@+id/email"/>

        <!-- country code -->

        <EditText
            android:id="@+id/country_code"
            android:visibility="visible"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/et_selector"
            android:ems="10"
            android:hint="@string/country_code"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/arc_primary"
            android:textColorHint="@color/arc_hints"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_country_code"/>

        <TextView
            android:id="@+id/tv_country_code"
            android:visibility="visible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/country"
            android:textColor="@color/arc_dark"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/first_name"
            app:layout_constraintStart_toStartOf="@+id/first_name"
            app:layout_constraintTop_toBottomOf="@+id/err_email"/>

        <TextView
            android:id="@+id/err_country_code"
            android:visibility="visible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/error"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/country_code"
            app:layout_constraintStart_toStartOf="@+id/first_name"
            app:layout_constraintTop_toBottomOf="@+id/country_code"/>

        <!-- contact number -->

        <EditText
            android:id="@+id/contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/et_selector"
            android:ems="10"
            android:hint="@string/contact_number"
            android:inputType="number"
            android:padding="8dp"
            android:textSize="14sp"
            android:textColor="@color/arc_primary"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_contact"/>

        <TextView
            android:id="@+id/tv_contact"
            android:visibility="visible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/contact_number"
            android:textColor="@color/arc_dark"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/contact"
            app:layout_constraintStart_toStartOf="@+id/contact"
            app:layout_constraintTop_toBottomOf="@+id/err_email"/>

        <TextView
            android:id="@+id/err_contact"
            android:visibility="visible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/error"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/last_name"
            app:layout_constraintStart_toStartOf="@+id/last_name"
            app:layout_constraintTop_toBottomOf="@+id/contact"/>


        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/btn_enter"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/round_button"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/btn_create_new_user"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/err_contact"
            app:layout_constraintVertical_bias="1.0"/>

        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:foregroundGravity="center_horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_user"/>
    </android.support.constraint.ConstraintLayout>



</ScrollView>

